--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="package.marvel_app">
+    package="com.marvel_app">
    <application
         android:label="marvel_app"
         android:icon="@mipmap/ic_launcher">
